# SearchEngine

./: .gitignore  CMakeLists.txt  README.md  config.json  search_engine.cpp  structure_program.md
Google_tests/: CMakeLists.txt  converterJSONtests.cpp  invertedIndexTests.cpp  limits_test.cpp  makrosforexception.h  searchServerTests.cpp  splitWordTest.cpp  testfiles.h
Release/: config.json
Resource/: The Number of the Beast_.txt  config.json
Utilites/: CMakeLists.txt  README.md  ShowReults.cpp  ShowReults.h  createJSONs.cpp  createManyFiles.cpp
configurator/: CMakeLists.txt  configurator.cpp
include/: config.h  converterJSON.h  exception.h  invertedindex.h  searchserver.h  stringutilites.h  structures.h
src/: converterJSON.cpp  exception.cpp  invertedindex.cpp  searchserver.cpp  stringutilites.cpp
